BAP-1887: Update OroLocalBundle System Configuration - added name format form type

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,6 +1,7 @@
 parameters:
     oro_locale.provider.locale_settings.class: Oro\Bundle\LocaleBundle\Provider\LocaleSettingsProvider
     oro_locale.twig.dateformat.class: Oro\Bundle\LocaleBundle\Twig\DateFormatExtension
+    oro_locale.form.type.name_format.type.class: Oro\Bundle\LocaleBundle\Form\Type\NameFormatType
 
 services:
     oro_locale.provider.locale_settings:
@@ -15,3 +16,10 @@ services:
             - @oro_config.global
         tags:
             - { name: twig.extension }
+
+    oro_locale.form.type.name_format.type:
+        class: %oro_locale.form.type.name_format.type.class%
+        arguments:
+            - @oro_locale.provider.locale_settings
+        tags:
+            - { name: form.type, alias: "oro_name_format" }
