--- a/Resources/config/name_format.yml
+++ b/Resources/config/name_format.yml
@@ -1,2 +1,3 @@
 en: %prefix% %first_name% %middle_name% %last_name% %suffix%
+en_US: %prefix% %first_name% %middle_name% %last_name% %suffix%
 ru_RU: %last_name% %first_name% %middle_name%
