BAP-1889: Create Locale Settings Provider - renamed LocaleSettingsProvider to LocaleSettings

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -1,11 +1,11 @@
 parameters:
-    oro_locale.provider.locale_settings.class: Oro\Bundle\LocaleBundle\Provider\LocaleSettingsProvider
+    oro_locale.settings.class: Oro\Bundle\LocaleBundle\Model\LocaleSettings
     oro_locale.twig.dateformat.class: Oro\Bundle\LocaleBundle\Twig\DateFormatExtension
     oro_locale.form.type.name_format.type.class: Oro\Bundle\LocaleBundle\Form\Type\NameFormatType
 
 services:
-    oro_locale.provider.locale_settings:
-        class: %oro_locale.provider.locale_settings.class%
+    oro_locale.settings:
+        class: %oro_locale.settings.class%
         arguments:
             - @oro_config.global
         calls:
@@ -23,6 +23,6 @@ services:
     oro_locale.form.type.name_format.type:
         class: %oro_locale.form.type.name_format.type.class%
         arguments:
-            - @oro_locale.provider.locale_settings
+            - @oro_locale.settings
         tags:
             - { name: form.type, alias: "oro_name_format" }
