BAP-1892: Twig Extension for all formatters - renamed default_currency to currency in system config - updated format currency to use currency from locale settings by default - added currecny and time zone to locale settings

--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -47,11 +47,11 @@ oro_system_configuration:
                   constraints:
                       - NotBlank: ~
 
-        oro_locale.default_currency:
+        oro_locale.currency:
             type: currency
             priority: 30
             options:
-                label: 'Default currency'
+                label: 'Currency'
                 required: true
                 constraints:
                     - NotBlank: ~
@@ -80,7 +80,7 @@ oro_system_configuration:
                                         children:
                                             - oro_locale.language
                                             - oro_locale.country
-                                            - oro_locale.default_currency
+                                            - oro_locale.currency
                                             - oro_locale.timezone
                                     locale_options:
                                         priority: 50
