BAP-1894: JS formatters - JS locale_settings implementation with options merging from different sources

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
     "require": {
         "php": ">=5.3.3",
         "symfony/symfony": ">=2.1",
-        "oro/requirejs-bundle": "dev-master"
+        "oro/requirejs-bundle": "dev-master",
+        "oro/config-bundle": "dev-master"
     },
     "autoload": {
         "psr-0": { "Oro\\Bundle\\LocaleBundle": "" }
