--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,9 +2,15 @@ parameters:
     oro_locale.settings.class: Oro\Bundle\LocaleBundle\Model\LocaleSettings
     oro_locale.twig.dateformat.class: Oro\Bundle\LocaleBundle\Twig\DateFormatExtension
     oro_locale.form.type.name_format.type.class: Oro\Bundle\LocaleBundle\Form\Type\NameFormatType
+
     oro_locale.format_converter.date_time.registry.class: Oro\Bundle\LocaleBundle\Converter\DateTimeFormatConverterRegistry
     oro_locale.format_converter.date_time.intl.class: Oro\Bundle\LocaleBundle\Converter\IntlDateTimeFormatConverter
     oro_locale.format_converter.date_time.moment.class: Oro\Bundle\LocaleBundle\Converter\MomentDateTimeFormatConverter
+
+    oro_locale.formatter.name.class: Oro\Bundle\LocaleBundle\Formatter\NameFormatter
+    oro_locale.formatter.address.class: Oro\Bundle\LocaleBundle\Formatter\AddressFormatter
+    oro_locale.formatter.date_time.class: Oro\Bundle\LocaleBundle\Formatter\DateTimeFormatter
+    oro_locale.formatter.number.class: Oro\Bundle\LocaleBundle\Formatter\NumberFormatter
 
 services:
     oro_locale.settings:
@@ -46,3 +52,24 @@ services:
             - @oro_locale.settings
         tags:
             - { name: oro_locale.format_converter.date_time, alias: moment }
+
+    oro_locale.formatter.name:
+        class: %oro_locale.formatter.name.class%
+        arguments:
+            - @oro_locale.settings
+
+    oro_locale.formatter.address:
+        class: %oro_locale.formatter.address.class%
+        arguments:
+            - @oro_locale.settings
+            - @oro_locale.formatter.name
+
+    oro_locale.formatter.date_time:
+        class: %oro_locale.formatter.date_time.class%
+        arguments:
+            - @oro_locale.settings
+
+    oro_locale.formatter.number:
+        class: %oro_locale.formatter.number.class%
+        arguments:
+            - @oro_locale.settings
