BAP-1928: Add information about currency symbol and position  - removed unused countries  - added information about currency symbol and its position  - updated unit tests

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -27,6 +27,7 @@ services:
             - [addNameFormats, [%oro_locale.format.name%]]
             - [addAddressFormats, [%oro_locale.format.address%]]
             - [addLocaleData, [%oro_locale.locale_data%]]
+            - [addCurrencyData, [%oro_locale.currency_data%]]
 
     # Form types
     oro_locale.form.type.name_format.type:
