BAP-1929: Update JS localization configuration  - moved default configuration parameters to DI configuration class  - moved getters for address and name formats to appropriate formatters  - added method LocaleSettings::getLanguage  - updated unit tests

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -33,7 +33,7 @@ services:
     oro_locale.form.type.name_format.type:
         class: %oro_locale.form.type.name_format.type.class%
         arguments:
-            - @oro_locale.settings
+            - @oro_locale.formatter.name
         tags:
             - { name: form.type, alias: "oro_name_format" }
 
