BAP-1948: Provide localized data for day of week and name of month - pass calendar settings to jquery ui - fixed issue of incorrect use of config manager default value

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -24,7 +24,7 @@ services:
     oro_locale.settings:
         class: %oro_locale.settings.class%
         arguments:
-            - @oro_config.user
+            - @oro_config.global
         calls:
             - [addNameFormats, [%oro_locale.format.name%]]
             - [addAddressFormats, [%oro_locale.format.address%]]
