--- a/Resources/config/requirejs.yml
+++ b/Resources/config/requirejs.yml
@@ -3,6 +3,13 @@ config:
         'moment':
             exports:
                 - 'moment'
+
+    map:
+        '*':
+            'moment': 'oro/moment-l10n'
+        'oro/moment-l10n':
+            'moment': 'moment'
+
     paths:
         'moment': 'bundles/orolocale/lib/moment.js'
         'numeral': 'bundles/orolocale/lib/numeral.js'
@@ -10,3 +17,4 @@ config:
         'oro/locale-settings/data': '../js/oro.locale_data.js'
         'oro/formatter/name': 'bundles/orolocale/js/formatter/name.js'
         'oro/formatter/address': 'bundles/orolocale/js/formatter/address.js'
+        'oro/moment-l10n': 'bundles/orolocale/js/moment-l10n.js'
