--- a/Resources/config/requirejs.yml
+++ b/Resources/config/requirejs.yml
@@ -19,9 +19,10 @@ config:
     paths:
         'moment': 'bundles/orolocale/lib/moment.js'
         'numeral': 'bundles/orolocale/lib/numeral.js'
-        'oro/formatter/number': 'bundles/orolocale/js/formatter/number.js'
         'oro/locale-settings': 'bundles/orolocale/js/locale-settings.js'
         'oro/locale-settings/data': '../js/oro.locale_data.js'
         'oro/formatter/name': 'bundles/orolocale/js/formatter/name.js'
         'oro/formatter/address': 'bundles/orolocale/js/formatter/address.js'
+        'oro/formatter/number': 'bundles/orolocale/js/formatter/number.js'
+        'oro/formatter/datetime': 'bundles/orolocale/js/formatter/datetime.js'
         'oro/moment-l10n': 'bundles/orolocale/js/moment-l10n.js'
