--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -2,7 +2,7 @@ parameters:
     oro_locale.settings.class: Oro\Bundle\LocaleBundle\Model\LocaleSettings
     oro_locale.calendar.class: Oro\Bundle\LocaleBundle\Model\Calendar
     oro_locale.calendar_factory.class: Oro\Bundle\LocaleBundle\Model\CalendarFactory
-    oro_locale.form.type.name_format.type.class: Oro\Bundle\LocaleBundle\Form\Type\NameFormatType
+    oro_locale.form.type.name_format.class: Oro\Bundle\LocaleBundle\Form\Type\NameFormatType
 
     oro_locale.format_converter.date_time.registry.class: Oro\Bundle\LocaleBundle\Converter\DateTimeFormatConverterRegistry
     oro_locale.format_converter.date_time.intl.class: Oro\Bundle\LocaleBundle\Converter\IntlDateTimeFormatConverter
@@ -12,6 +12,12 @@ parameters:
     oro_locale.formatter.address.class: Oro\Bundle\LocaleBundle\Formatter\AddressFormatter
     oro_locale.formatter.date_time.class: Oro\Bundle\LocaleBundle\Formatter\DateTimeFormatter
     oro_locale.formatter.number.class: Oro\Bundle\LocaleBundle\Formatter\NumberFormatter
+
+    oro_locale.form.type.country.class: Oro\Bundle\LocaleBundle\Form\Type\CountryType
+    oro_locale.form.type.currency.class: Oro\Bundle\LocaleBundle\Form\Type\CurrencyType
+    oro_locale.form.type.locale.class: Oro\Bundle\LocaleBundle\Form\Type\LocaleType
+
+    oro_locale.locale_listener.class: Oro\Bundle\LocaleBundle\EventListener\LocaleListener
 
     oro_locale.twig.date_format.class: Oro\Bundle\LocaleBundle\Twig\DateFormatExtension
     oro_locale.twig.locale.class: Oro\Bundle\LocaleBundle\Twig\LocaleExtension
@@ -44,12 +50,27 @@ services:
             - @service_container
 
     # Form types
-    oro_locale.form.type.name_format.type:
-        class: %oro_locale.form.type.name_format.type.class%
+    oro_locale.form.type.name_format:
+        class: %oro_locale.form.type.name_format.class%
         arguments:
             - @oro_locale.formatter.name
         tags:
             - { name: form.type, alias: "oro_name_format" }
+
+    oro_locale.form.type.country:
+        class: %oro_locale.form.type.country.class%
+        tags:
+            - { name: form.type, alias: "oro_country" }
+
+    oro_locale.form.type.currency:
+        class: %oro_locale.form.type.currency.class%
+        tags:
+            - { name: form.type, alias: "oro_currency" }
+
+    oro_locale.form.type.locale:
+        class: %oro_locale.form.type.locale.class%
+        tags:
+            - { name: form.type, alias: "oro_locale" }
 
     # Converters
     oro_locale.format_converter.date_time.registry:
@@ -68,6 +89,18 @@ services:
             - @oro_locale.formatter.date_time
         tags:
             - { name: oro_locale.format_converter.date_time, alias: moment }
+
+    # event listeners
+    oro_locale.locale_listener:
+        class: %oro_locale.locale_listener.class%
+        arguments:
+            - @oro_locale.settings
+            - @translator
+        calls:
+            - [ setRequest, [@?request=] ]
+        tags:
+            - { name: kernel.event_subscriber }
+
 
     # Formatters
     oro_locale.formatter.name:
