BAP-2024: Fix address and name formats on JS

--- a/Resources/config/services.yml
+++ b/Resources/config/services.yml
@@ -60,7 +60,7 @@ services:
     oro_locale.form.type.country:
         class: %oro_locale.form.type.country.class%
         tags:
-            - { name: form.type, alias: "oro_country" }
+            - { name: form.type, alias: "oro_locale_country" }
 
     oro_locale.form.type.currency:
         class: %oro_locale.form.type.currency.class%
